fixes alignment of moment capture.

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -202,7 +202,7 @@ nav a:link {
 }
 
 .card:after {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
@@ -282,7 +282,7 @@ nav a:link {
 }
 
 .video-image:after {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 60vh;
@@ -470,16 +470,21 @@ nav a:link {
 
 .images {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
-  position: relative;
+  padding: 5px;
+  margin: 0 auto;
 }
 
 .img {
   padding: 2px;
   max-width: 320px;
   max-height: 200px;
-  display: inline-block;
+  margin: 0 auto;
+}
+
+.loader {
+  margin: 0 auto;
 }
 
 .popupButton {
@@ -489,8 +494,7 @@ nav a:link {
 
 .moments {
   width: 100%;
-  display: flex;
-  justify-content: center;
+  display: block;
 }
 
 #popupPlayer {
@@ -505,14 +509,17 @@ nav a:link {
   text-align: center;
 }
 
-.buttons {
+.rowHolder {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: row;
 }
 
-.innerButtons {
-  display: inline-block;
+.buttons {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 .shareBox {
@@ -605,6 +612,10 @@ button:disabled {
   text-decoration: none;
   color: #2e2d2d;
   cursor: default;
+}
+
+button:disabled:hover {
+  border: none;
 }
 
 /* User modals */
